Entities and more repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/tingeso
+spring.datasource.username=postgres
+#cambiar dependiendo de la contraseña
+spring.datasource.password=pass1234
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
