--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/tingeso
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/tingeso
+spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.h2.console.enabled=true
+spring.datasource.username=vicho314
 #cambiar dependiendo de la contraseña
-spring.datasource.password=pass1234
+spring.datasource.password=mktrilogy27
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
