Adding env variables and separate database to tests via H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=backend
 #spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/tingeso
-spring.datasource.url=jdbc:h2:mem:dcbapp
-spring.h2.console.enabled=true
-spring.datasource.username=vicho314
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.h2.console.enabled=true
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 #cambiar dependiendo de la contraseña
-spring.datasource.password=mktrilogy27
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
