--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 spring.application.name=backend
 #spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/tingeso
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -8,5 +9,5 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.open-in-view=true
